add config sonarQube to pom.xml